feat(jdk): upgrade jdk to 17